todas las reglas escritas no funcionales

--- a/parser/ejemplo.html
+++ b/parser/ejemplo.html
@@ -1,6 +1,12 @@
-
-
-<body>
-    
-</body>
-</html>
+link : text link
+            |   OPEN_LINK link CLOSE_LINK link
+            |   OPEN_EMPHASIS emphasis CLOSE_EMPHASIS link
+            |   OPEN_EMAIL email CLOSE_EMAIL link
+            |   OPEN_AUTOR autor CLOSE_AUTOR link
+            |   OPEN_COMMENT comment CLOSE_COMMENT link
+            |   text
+            |   OPEN_LINK link CLOSE_LINK
+            |   OPEN_EMPHASIS emphasis CLOSE_EMPHASIS
+            |   OPEN_COMMENT comment CLOSE_COMMENT
+            |   OPEN_EMAIL email CLOSE_EMAIL 
+            |   OPEN_AUTOR autor CLOSE_AUTOR 
