--- a/parser/ejemplo.html
+++ b/parser/ejemplo.html
@@ -1,12 +1,23 @@
-link : text link
-            |   OPEN_LINK link CLOSE_LINK link
-            |   OPEN_EMPHASIS emphasis CLOSE_EMPHASIS link
-            |   OPEN_EMAIL email CLOSE_EMAIL link
-            |   OPEN_AUTOR autor CLOSE_AUTOR link
-            |   OPEN_COMMENT comment CLOSE_COMMENT link
-            |   text
-            |   OPEN_LINK link CLOSE_LINK
-            |   OPEN_EMPHASIS emphasis CLOSE_EMPHASIS
-            |   OPEN_COMMENT comment CLOSE_COMMENT
-            |   OPEN_EMAIL email CLOSE_EMAIL 
-            |   OPEN_AUTOR autor CLOSE_AUTOR 
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Ejemplo de Estilos en Archivo HTML</title>
+</head>
+<body>
+  <div style="background-color: red; color: white; display: inline-block;">
+    <p>puto el que lee</p>
+  </div><p>puvirgil</p>
+
+  <div style="background-color: red; color: white; display: inline;">
+    adasdasdas</div>
+    
+
+
+
+
+
+</body>
+</html>
