--- a/HTML_Salida.html
+++ b/HTML_Salida.html
@@ -4,7 +4,9 @@
    <title>Ejemplo de Estilos en Archivo HTML</title>
 </head>
 <body>
-    <h1>Ejemplo TPI</h1>Cualquier sugerencia de mejora es bienvenida<h2><a href='https://www.example.com/'>Click aqui</a></h2>
-<p>Titulo seccion1</p>
-Seccion de prueba
+    
+<div style="color:white;background-color:green;font-size:8pts">El titulo del articuloJuanPerez</div><a href='https://www.example.com/'></a>Image URL: Video URL: JohnDoe123-456-7890john@example.com2023John DoeThis is emphasized text.
+<table>
+<tr>Value 1Value 2</tr> 
+</table>  
 </body>
