--- a/HTML_Salida.html
+++ b/HTML_Salida.html
@@ -5,8 +5,9 @@
 </head>
 <body>
     
-<div style="color:white;background-color:green;font-size:8pts">El titulo del articuloJuanPerez</div><a href='https://www.example.com/'></a>Image URL: Video URL: JohnDoe123-456-7890john@example.com2023John DoeThis is emphasized text.
-<table>
-<tr>Value 1Value 2</tr> 
-</table>  
+<div style="color:white;background-color:green;font-size:8pts">El titulo del articuloJuanPerez</div>
+<div style="color:white;background-color:green;font-size:8pts">123-456-7890john@example.com2023John Doe</div>
+<p><a href='https://www.example.com/'>haga Click aqui</a>JohnDoeThis is emphasized text.</p>
+
+<table><tr>Value 1Value 2</tr></table>  
 </body>
